20211217: using never to pull images from local

--- a/nodejs-simple-rest-deployment-rolling.yaml
+++ b/nodejs-simple-rest-deployment-rolling.yaml
@@ -31,5 +31,5 @@ spec:
           initialDelaySeconds: 5
           periodSeconds: 5
           successThreshold: 1
-        imagePullPolicy: Always
+        imagePullPolicy: Never
 
